--- a/build.yaml
+++ b/build.yaml
@@ -13,22 +13,18 @@
 #
 ---
 include:
-  # cygnus
-  - board: nice_nano_v2
-    shield: cygnus_central_dongle dongle_display
-    artifact-name: cygnus_central_dongle
-  - board: nice_nano_v2
-    shield: cygnus_central_left
-    artifact-name: cygnus_central_left
-  - board: nice_nano_v2
-    shield: cygnus_peripheral_left
-    artifact-name: cygnus_peripheral_left
-  - board: nice_nano_v2
-    shield: cygnus_peripheral_right
-    artifact-name: cygnus_peripheral_right
-  - board: nice_nano_v2
+  # totem
+  - board: seeeduino_xiao_ble
+    shield: totem_central_dongle dongle_display
+    artifact-name: totem_central_dongle
+  - board: seeeduino_xiao_ble
+    shield: totem_central_left
+    artifact-name: totem_central_left
+  - board: seeeduino_xiao_ble
+    shield: totem_peripheral_left
+    artifact-name: totem_peripheral_left
+  - board: seeeduino_xiao_ble
+    shield: totem_peripheral_right
+    artifact-name: totem_peripheral_right
+  - board: seeeduino_xiao_ble
     shield: settings_reset
-  - board: nice_nano_v2
-    shield: cygnus_central_dongle dongle_display
-    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-    artifact-name: cygnus_central_dongle_with_logging
